<resources>
    <string name="app_name">TransformMonitorApp</string>
    <string name="register">Реєстрація</string>
    <string name="fullname">Повне ім`я</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Увійти</string>
    <string name="AlreadyHaveAccount">Маєте акаунт? Увійти</string>
    <string name="logout">Вихід</string>
    <string name="wait">Завантаження…</string>
    <string name="change">Змінити</string>
    <string name="set">Змінити</string>
    <string name="hello_user">Привіт користувач (Роль невідома)</string>
    <string name="token_missing">Токен втрачено</string>
    <string name="profile_in_progress">Профіль в розробці</string>
    <string name="logged_out_success">Успішний вихід. До зустрічі!</string>
    <string name="logout_failed">Невдалий вихід</string>
    <string name="all_users">Користувачі</string>
    <string name="admins">Адміністратори</string>
    <string name="search">Пошук користувачів</string>
    <string name="profile">Профіль</string>
    <string name="serverNotAvailable">Сервер недоступний. Спробуйте пізніше\n</string>
    <string name="edit">Редагувати</string>
    <string name="save">Зберегти</string>
    <string name="editProfile">Редагувати профіль</string>
    <string name="profile_with_username">Вітаємо, %1$s</string>
    <string name="name">Ім\'я</string>
    <string name="activity_operator_all">Всі трансформатори</string>
    <string name="activity_operator_by_id">Трансформатор за ID</string>
    <string name="activity_operator_alerts">Попередження трансформатора</string>

    <string name="admin_create">Внесення нового трансформатора</string>
    <string name="admin_update">Оновлення даних трансформатора</string>
    <string name="admin_deactivate">Дезактивування трансформатора</string>

    <string name="admin_export_one">Експорт одного трансформатора</string>
    <string name="admin_export_range">Експорт діапазона трансформаторів</string>
    <string name="admin_export_all">Експорт всіх трансформаторів</string>

    <string name="admin_alerts">Всі попередження трансформатора</string>
    <string name="admin_critical_alerts">Критичні попередження трансформатора</string>
    <string name="admin_logs">Всі логи трансформатора</string>


</resources>