<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_gravity="center">

    <include layout="@layout/layout_form_base"/>

    <!-- Вміст для Register -->
    <EditText
        android:id="@+id/usernameDto"
        style="@style/BaseEditText"
        android:hint="@string/fullname"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/emailDto"
        style="@style/BaseEditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/passwordDto"
        style="@style/BaseEditText"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRegister"
        style="@style/BaseButton"
        android:text="@string/register"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AlreadyHaveAccount"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="24dp"
        android:clickable="true"
        android:focusable="true"/>
</LinearLayout>
