<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/inputBackground"
        android:padding="36dp"
        android:elevation="4dp"
        android:layout_marginTop="36dp">

        <TextView
            android:id="@+id/tvProfileTitle"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- NAME -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:paddingEnd="8dp"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:enabled="false"
                android:background="@color/inputBackground"
                android:padding="12dp"/>
        </LinearLayout>

        <!-- EMAIL -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:paddingEnd="8dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:enabled="false"
                android:background="@color/inputBackground"
                android:inputType="textEmailAddress"
                android:padding="20dp"/>
        </LinearLayout>

        <!-- PASSWORD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:paddingEnd="8dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:enabled="false"
                android:inputType="textPassword"
                android:background="@color/inputBackground"
                android:padding="12dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnEdit"
            android:text="@string/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@android:color/white"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>